--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/claude-agent-sdk": "^0.1.55",
+    "@anthropic-ai/claude-agent-sdk": "^0.1.57",
     "@octokit/rest": "^22.0.0",
-    "@openai/codex-sdk": "^0.63.0",
+    "@openai/codex-sdk": "^0.64.0",
     "discord.js": "^14.16.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "pg": "^8.11.0",
     "telegraf": "^4.16.0",
     "telegramify-markdown": "^1.3.0"
@@ -43,19 +43,22 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/express": "^5.0.5",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.0.0",
     "@types/pg": "^8.11.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "10.1.8",
-    "jest": "^29.7.0",
-    "prettier": "^3.7.3",
-    "ts-jest": "^29.1.0",
+    "jest": "^30.2.0",
+    "prettier": "^3.7.4",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.48.0"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "overrides": {
+    "test-exclude": "^7.0.1"
   }
 }
